@@ -70,19 +70,19 @@ class CrtdlValidatorServiceTest {
     }
 
     @Test
-    void validInput() throws ValidationException {
-        Crtdl crtdl = new Crtdl(node, new DataExtraction(List.of(patientGroup, new AttributeGroup("test", "https://www.medizininformatik-initiative.de/fhir/core/modul-labor/StructureDefinition/ObservationLab", List.of(), List.of(new Filter("token", "code", List.of(new Code("some-system", "some-code"))))))));
+    void validInput_withoutFilter() throws ValidationException {
+        Crtdl crtdl = new Crtdl(node, new DataExtraction(List.of(patientGroup, new AttributeGroup("test", "https://www.medizininformatik-initiative.de/fhir/core/modul-labor/StructureDefinition/ObservationLab", List.of(), List.of()))));
 
         var validatedCrtdl = validatorService.validate(crtdl);
 
         assertThat(validatedCrtdl).isNotNull();
-        assertThat(validatedCrtdl.dataExtraction().attributeGroups().getFirst().compiledFilter()).isNull();
-        assertThat(validatedCrtdl.dataExtraction().attributeGroups().getFirst().attributes()).isEqualTo(
+        assertThat(validatedCrtdl.dataExtraction().attributeGroups().get(0).compiledFilter()).isNull();
+        assertThat(validatedCrtdl.dataExtraction().attributeGroups().get(1).compiledFilter()).isNull();
+        assertThat(validatedCrtdl.dataExtraction().attributeGroups().get(0).attributes()).isEqualTo(
                 List.of(
                         new AnnotatedAttribute("Patient.id", "Patient.id", "Patient.id", false),
                         new AnnotatedAttribute("Patient.meta.profile", "Patient.meta.profile", "Patient.meta.profile", false)
                 ));
-
         assertThat(validatorService.validate(crtdl).dataExtraction().attributeGroups().get(1).attributes()).isEqualTo(
                 List.of(
                         new AnnotatedAttribute("Observation.id", "Observation.id", "Observation.id", false),
@@ -90,6 +90,28 @@ class CrtdlValidatorServiceTest {
                         new AnnotatedAttribute("Observation.subject", "Observation.subject", "Observation.subject", false, List.of("patientGroupId"))
                 ));
     }
+    @Test
+    void validInput_withFilter() throws ValidationException {
+        Crtdl crtdl = new Crtdl(node, new DataExtraction(List.of(patientGroup, new AttributeGroup("test", "https://www.medizininformatik-initiative.de/fhir/core/modul-labor/StructureDefinition/ObservationLab", List.of(), List.of(new Filter("token", "code", List.of(new Code("some-system", "some-code"))))))));
+
+        var validatedCrtdl = validatorService.validate(crtdl);
+
+        assertThat(validatedCrtdl).isNotNull();
+        assertThat(validatedCrtdl.dataExtraction().attributeGroups().get(0).compiledFilter()).isNull();
+        assertThat(validatedCrtdl.dataExtraction().attributeGroups().get(1).compiledFilter()).isNotNull();
+        assertThat(validatedCrtdl.dataExtraction().attributeGroups().get(0).attributes()).isEqualTo(
+                List.of(
+                        new AnnotatedAttribute("Patient.id", "Patient.id", "Patient.id", false),
+                        new AnnotatedAttribute("Patient.meta.profile", "Patient.meta.profile", "Patient.meta.profile", false)
+                ));
+        assertThat(validatorService.validate(crtdl).dataExtraction().attributeGroups().get(1).attributes()).isEqualTo(
+                List.of(
+                        new AnnotatedAttribute("Observation.id", "Observation.id", "Observation.id", false),
+                        new AnnotatedAttribute("Observation.meta.profile", "Observation.meta.profile", "Observation.meta.profile", false),
+                        new AnnotatedAttribute("Observation.subject", "Observation.subject", "Observation.subject", false, List.of("patientGroupId"))
+                ));
+    }
+
 
 
 }
